--- a/src/components/header/header.less
+++ b/src/components/header/header.less
@@ -2,16 +2,45 @@
 @defaultDarkColor: #1d1e2c;
 
 header.header-component {
-	background: lighten(@defaultLightColor, 10%);
 	height: fit-content;
 	width: 100%;
-	padding: 20px;
 
 	z-index: 900;
+
+	@media screen and (min-width: 460px) {
+		&::before {
+			content: "";
+
+			position: fixed;
+			display: block;
+
+			width: 100%;
+			height: 100%;
+
+			top: 0;
+			left: 0;
+
+			background: rgba(#000, .4);
+			opacity: 0;
+			pointer-events: none;
+
+			transition: 100ms ease all;
+		}
+
+		&[data-blackout="true"]::before {
+			opacity: 1;
+			pointer-events: all;
+		}
+	}
 
 	div.header-content {
 		z-index: 200;
 		gap: 20px;
+
+		background: lighten(@defaultLightColor, 10%);
+		padding: 20px;
+
+		overflow: hidden;
 	}
 
 	div.header-content #title-socials {
@@ -61,7 +90,7 @@ header.header-component {
 		transition: 100ms ease all;
 		cursor: pointer;
 
-		&[is-shown="true"] {
+		&[is-open="true"] {
 			display: flex;
 		}
 
@@ -165,7 +194,9 @@ header.header-component {
 	}
 
 	@media screen and (max-width: 462px) {
-		padding: 10px;
+		div.header-content {
+			padding: 10px;
+		}
 
 		div.header-content #title-socials #social-icons-title {
 			display: none;
@@ -193,37 +224,4 @@ header.header-component {
 			transform-origin: 0;
 		}
 	}
-}
-
-header.header-component #mobile-menu-content {
-	position: absolute;
-	display: flex;
-
-	width: 100%;
-	max-width: 460px;
-	height: 87%;
-
-	right: 0;
-
-	z-index: 100;
-
-	background: lighten(@defaultLightColor, 14%);
-	color: @defaultDarkColor;
-	font-weight: 500;
-
-	transform: translateX(10%);
-
-	opacity: 0;
-	transition: 150ms ease all;
-
-	&[is-active="false"] {
-		display: none;
-	}
-
-	&[is-shown="true"] {
-		transform: translateX(0);
-		opacity: 1;
-	}
-
-	box-shadow: -4px 0 0 0 rgba(#000, .1), -8px 0 0 0 rgba(#000, .1);
 }
