--- a/src/root.less
+++ b/src/root.less
@@ -1,7 +1,7 @@
 @import (css) url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css");
 
-@import "./components/components.less";
+@import "./components.less";
 
 * {
 	box-sizing: border-box;
@@ -43,6 +43,7 @@ main#app-root {
 	// justify-content: center;
 	// align-items: center;
 
+	flex-direction: column;
 	overflow: hidden;
 }
 
