Navigation menu component

--- a/src/components/mobile-menu/mobile-menu.less
+++ b/src/components/mobile-menu/mobile-menu.less
@@ -60,6 +60,7 @@
 		gap: 10px;
 
 		align-items: flex-end;
+		margin-bottom: 40px;
 
 		div.icon:not([source-icon="phone-call"]) {
 			display: none;
