General routing system

--- a/src/root.less
+++ b/src/root.less
@@ -81,3 +81,24 @@ div.screen-size-locker {
 		text-align: center;
 	}
 }
+
+div#page-data-container {
+	position: relative;
+	display: flex;
+
+	width: 100%;
+	overflow: hidden;
+	overflow-y: auto;
+
+	justify-content: center;
+	align-items: center;
+}
+
+a[href].icon {
+	text-decoration: none;
+	border-radius: 100px;
+}
+
+a[href].block {
+	text-decoration: none;
+}
