--- a/src/components.less
+++ b/src/components.less
@@ -133,4 +133,19 @@ div.icon {
 	img[src$="telegram.svg"] {
 		transform: translateX(-2px);
 	}
+
+	a {
+		background: none;
+		color: transparent;
+		text-decoration: none;
+	}
+}
+div.page-container {
+	position: relative;
+	display: flex;
+
+	width: 100%;
+	height: 100%;
+
+	flex-direction: column;
 }
