--- a/src/pages/not-match/not-match.less
+++ b/src/pages/not-match/not-match.less
@@ -2,7 +2,7 @@ div.not-match-page {
 	justify-content: center;
 	align-items: flex-start;
 
-	height: 100%;
+	height: fit-content;
 	overflow: hidden;
 
 	width: 100%;
@@ -20,6 +20,9 @@ div.not-match-page {
 
 		font-weight: 700;
 		font-size: 52px;
+		margin-bottom: 20px;
+
+		line-height: initial;
 	}
 
 	div.description {
