--- a/src/root.less
+++ b/src/root.less
@@ -5,7 +5,7 @@
 
 * {
 	box-sizing: border-box;
-	user-select: none;
+	// user-select: none;
 	outline: none;
 
 	-webkit-tap-highlight-color: transparent;
@@ -45,6 +45,7 @@ main#app-root {
 
 	flex-direction: column;
 	overflow: hidden;
+	user-select: none;
 }
 
 div.screen-size-locker {
@@ -84,14 +85,16 @@ div.screen-size-locker {
 
 div#page-data-container {
 	position: relative;
-	display: flex;
+	// display: flex;
+	display: block;
 
 	width: 100%;
 	overflow: hidden;
 	overflow-y: auto;
 
 	justify-content: center;
-	align-items: center;
+	flex-direction: column;
+	// align-items: center;
 }
 
 a[href].icon {
