--- a/src/components.less
+++ b/src/components.less
@@ -22,7 +22,8 @@ div.button {
 	text-align: center;
 
 	background-color: @defaultLightColor;
-	&:hover {
+	&:hover,
+	&:focus-visible {
 		background-color: @defaultDarkColor;
 		color: rgba(#fff, .95);
 	}
@@ -64,6 +65,23 @@ div.content-block {
 	&.nowrap {
 		flex-wrap: nowrap;
 		white-space: nowrap;
+	}
+
+	&.no-centering {
+		justify-content: flex-start;
+		align-items: flex-start;
+	}
+
+	&.w-100 {
+		width: 100%;
+	}
+
+	&.h-100 {
+		height: 100%;
+	}
+
+	&.gap-10 {
+		gap: 10px;
 	}
 }
 
