--- a/src/cms/shared.less
+++ b/src/cms/shared.less
@@ -93,6 +93,12 @@
 			background: darken(#fff, 12%);
 			opacity: 1;
 		}
+
+		&.disabled {
+			pointer-events: none;
+			background: darken(#fff, 10%);
+			opacity: .8;
+		}
 	}
 }
 
