--- a/src/cms/forms/control-form/cmscf-styles/menu.less
+++ b/src/cms/forms/control-form/cmscf-styles/menu.less
@@ -1,4 +1,11 @@
 div.cms-cf-menu {
 	min-width: fit-content;
 	width: fit-content;
+
+	@height: 50px;
+	min-height: @height;
+	height: @height;
+
+	overflow: hidden;
+	padding: 0;
 }
