--- a/src/cms/forms/control-form/control-form.less
+++ b/src/cms/forms/control-form/control-form.less
@@ -1,3 +1,8 @@
+@import (less) "./cmscf-styles/header.less";
+@import (less) "./cmscf-styles/menu.less";
+@import (less) "./cmscf-styles/content.less";
+@import (less) "./cmscf-styles/profile.less";
+
 div.form#control-form {
 	width: 100%;
 	height: 100%;
@@ -13,5 +18,10 @@ div.form#control-form {
 		height: 100%;
 
 		gap: 10px;
+
+		justify-content: flex-start;
+
+		overflow: hidden;
+		overflow-y: scroll;
 	}
 }
