--- a/src/components.less
+++ b/src/components.less
@@ -72,6 +72,11 @@ div.content-block {
 		align-items: flex-start;
 	}
 
+	&.no-h-centering {
+		justify-content: flex-start;
+		// align-items: flex-start;
+	}
+
 	&.w-100 {
 		width: 100%;
 	}
