--- a/src/cms/forms/control-form/cmscf-styles/content.less
+++ b/src/cms/forms/control-form/cmscf-styles/content.less
@@ -1,10 +1,114 @@
 div.cms-cf-content {
-	min-width: fit-content;
-	min-height: fit-content;
+	width: fit-content;
+	height: fit-content;
 
-	width: 100%;
-	height: 100%;
+	position: absolute;
 
-	overflow: hidden;
-	overflow-y: auto;
+	div.content-page {
+		width: fit-content;
+		height: fit-content;
+		padding: 10px;
+
+		gap: 10px;
+		font-weight: 500;
+
+		div.button.volumetric {
+			background: rgba(#fff, .6);
+			border-radius: 4px;
+
+			width: calc(100% - 40px);
+
+			margin: 20px 20px;
+			margin-bottom: 40px;
+		}
+
+		span {
+			white-space: normal;
+		}
+
+		span.data-block-title {
+			font-weight: 700;
+			opacity: 0.5;
+		}
+
+		div.data-block {
+			overflow: initial;
+			gap: 6px;
+			width: 560px;
+			max-width: 100%;
+			div.data-block-content {
+				width: 100%;
+			}
+
+			span.data-block-title:not(:first-child) {
+				margin-top: 10px;
+			}
+
+			div.image-selector {
+				position: relative;
+				display: flex;
+
+				flex-direction: row;
+
+				width: 100%;
+				height: fit-content;
+				gap: 10px;
+
+				padding: 10px;
+				background: rgba(#000, .05);
+
+				cursor: pointer;
+				transition: 100ms ease all;
+
+				&:hover {
+					background: rgba(#000, .08);
+				}
+
+				border-radius: 4px;
+
+				div.selection-box {
+					position: relative;
+					display: flex;
+
+					@size: 10px;
+
+					min-width: 16px * @size;
+					min-height: 9px * @size;
+
+					// background: #000;
+					border-radius: 5px;
+					background: rgba(#000, .05);
+
+					background-size: contain;
+					background-repeat: no-repeat;
+
+					background-position: center center;
+
+					border: 2px dotted rgba(#000, .4);
+				}
+
+				div.selection-content {
+					position: relative;
+					display: flex;
+
+					flex-direction: column;
+
+					justify-content: center;
+					align-items: center;
+
+					width: 100%;
+
+					font-size: 14px;
+					span.selection-hint {
+						opacity: .8;
+					}
+				}
+			}
+		}
+
+		div#editorjs-holder {
+			width: 100%;
+			white-space: normal;
+		}
+	}
 }
