--- a/src/cms/components/dropdown/dropdown.less
+++ b/src/cms/components/dropdown/dropdown.less
@@ -1,105 +1,135 @@
+// Стандартный набор цветов для форм
+@defaultLightColor: #e5deba;
+@defaultDarkColor: #1d1e2c;
+
 div.dropdown {
-	width: fit-content;
-	height: 40px;
+	font-size: 15px;
 	font-weight: 500;
 
-	white-space: nowrap;
-	text-overflow: ellipsis;
+	max-width: 100%;
 
-	span.dropdown-title {
-		position: relative;
-		display: flex;
+	div.dropdown-header-content {
+		width: 100%;
+		height: 30px;
 
-		flex-wrap: nowrap;
+		background: rgba(#000, .08);
+		border-radius: 4px;
 
-		white-space: nowrap;
-		text-overflow: ellipsis;
+		transition: 100ms ease all;
+		cursor: pointer;
 
-		span {
+		div.select-button {
+			position: relative;
+			display: flex;
+
+			justify-content: center;
+			align-items: center;
+
+			min-width: 30px;
+			width: 30px;
+
+			height: 100%;
+
+			background: rgba(#000, .1);
+			border-radius: 4px;
+			overflow: hidden;
+
+			img {
+				width: 12px;
+				height: 12px;
+
+				opacity: .5;
+				transition: 100ms ease all;
+			}
+		}
+
+		span.selection-text {
 			position: relative;
 			display: block;
 
-			width: 100%;
-
-			white-space: nowrap;
+			padding: 0 10px;
+			overflow: hidden;
 			text-overflow: ellipsis;
 
-			overflow: hidden;
-			font-size: 15px;
+			mask-image: linear-gradient(to right, #000 90%, transparent);
+			width: 100%;
 		}
 
-		height: 100%;
-		width: fit-content;
-		max-width: 220px;
-		opacity: 0.9;
-
-		padding: 10px;
+		&:hover {
+			background: rgba(#000, .12);
+			div.select-button img {
+				opacity: 0.8;
+				transform: rotate(90deg);
+			}
+		}
 	}
 
-	border-radius: 4px;
-
-	transition: 100ms ease all;
-
-	background: rgba(#000, .1);
-	border: 1px solid rgba(#000, .01);
-
-	cursor: pointer;
-
-	&:hover {
-		background: rgba(#000, .15);
-	}
-
-	div.children-holder {
-		cursor: default;
+	div.dropdown-items-holder {
 		position: absolute;
-		display: flex;
+		bottom: 0;
 
-		flex-direction: column;
-		flex-wrap: nowrap;
+		width: fit-content;
+		max-width: 150%;
+		min-width: 80%;
 
-		bottom: -5px;
-		border: 1px solid rgba(#000, .1);
+		height: fit-content;
 
 		transform: translateY(100%);
-		left: 0;
+		align-items: flex-start;
 
-		width: fit-content;
-		// min-width: fit-content;
-		max-width: 260px;
+		padding: 0;
+		border-radius: 4px;
+		padding: 10px 0;
 
-		white-space: nowrap;
-		padding: 4px 0;
-		transition: inherit;
+		background: @defaultDarkColor;
+		color: @defaultLightColor;
 
-		max-height: 220px;
-		overflow: hidden;
-		overflow-y: scroll;
+		opacity: 0;
+		pointer-events: none;
+		transition: 100ms ease all;
 
-		div.empty {
-			padding: 7px;
-			font-size: 14px;
-			opacity: .7;
-		}
+		div.item {
+			position: relative;
+			display: block;
 
-		z-index: 100;
-		&[state-open="false"] {
-			bottom: 0;
-			opacity: 0;
+			white-space: normal;
 
-			pointer-events: none;
-			z-index: initial;
-		}
+			padding: 10px;
 
-		div.dropdown-item {
-			padding: 7px;
-			font-size: 15px;
+			min-width: 100%;
+			width: fit-content;
 
 			cursor: pointer;
 			transition: 100ms ease all;
 
 			&:hover {
-				background: rgba(#000, .1);
+				background: lighten(@defaultLightColor, 10%);
+				color: @defaultDarkColor;
 			}
+		}
+	}
+
+	&[data-open="true"] {
+		div.dropdown-header-content {
+			background: @defaultDarkColor;
+			color: @defaultLightColor;
+
+			div.select-button {
+				background: transparent;
+				img {
+					filter: invert(80%) sepia(100%);
+				}
+			}
+		}
+		div.dropdown-header-content div.select-button img {
+			opacity: 0.8;
+			transform: rotate(180deg);
+		}
+
+		div.dropdown-items-holder {
+			bottom: -5px;
+			opacity: 0.9;
+			pointer-events: all;
 		}
 	}
 }
