--- a/src/cms/forms/control-form/control-form.less
+++ b/src/cms/forms/control-form/control-form.less
@@ -1,8 +1,3 @@
-@import (less) "./cmscf-styles/header.less";
-@import (less) "./cmscf-styles/menu.less";
-@import (less) "./cmscf-styles/content.less";
-@import (less) "./cmscf-styles/profile.less";
-
 div.form#control-form {
 	width: 100%;
 	height: 100%;
@@ -10,18 +5,76 @@ div.form#control-form {
 	overflow: hidden;
 	display: flex;
 
-	div.cm-cf-wrapper {
-		margin: 10px;
-		margin-top: 0;
+	min-width: 800px;
+	max-width: 1280px;
 
+	div.content-header {
 		width: calc(100% - 20px);
+		margin: 10px;
+		padding: 0;
+
+		border-radius: 5px;
+		overflow: hidden;
+		min-height: 50px;
+
+		z-index: 10;
+
+		div.section {
+			height: 50px;
+
+			&.right {
+				margin-left: auto;
+			}
+		}
+	}
+
+	div.content-container {
+		width: calc(100% - 40px);
 		height: 100%;
 
-		gap: 10px;
-
-		justify-content: flex-start;
-
 		overflow: hidden;
-		overflow-y: scroll;
+
+		margin: 20px 10px;
+		margin-top: -10px;
+		margin-bottom: 0;
+
+		div.dropdown {
+			width: 100%;
+		}
+
+		div.section-wrapper {
+			// background: red;
+			width: 100%;
+			height: fit-content;
+			padding: 10px;
+			gap: 10px;
+
+			// padding-top: 30px;
+
+			justify-content: center;
+
+			div.section {
+				width: 100%;
+				height: fit-content;
+
+				&.aside-menu {
+					max-width: 320px;
+					width: 320px;
+
+					overflow: initial;
+
+					// background: #000;
+				}
+
+				&.editor-container {
+					min-height: 720px;
+					max-width: 720px;
+				}
+			}
+		}
+
+		div.content-scroll-area {
+			width: 100%;
+		}
 	}
 }
