--- a/src/cms/components/dropdown/dropdown.less
+++ b/src/cms/components/dropdown/dropdown.less
@@ -137,6 +137,8 @@ div.dropdown {
 		}
 
 		div.dropdown-items-holder {
+			z-index: 100;
+
 			bottom: -5px;
 			opacity: 0.9;
 			pointer-events: all;
