--- a/src/cms/forms/control-form/editor-page/editor-page.less
+++ b/src/cms/forms/control-form/editor-page/editor-page.less
@@ -65,6 +65,14 @@ div.content-container#content-editor {
 			&.editor-container {
 				min-height: 720px;
 				max-width: 720px;
+
+				font-size: 15px;
+				font-weight: 500;
+				.ce-tune-alignment--left {
+					.ce-paragraph {
+						text-align: justify;
+					}
+				}
 			}
 		}
 	}
@@ -82,12 +90,37 @@ div.content-container#content-editor {
 		opacity: .5;
 
 		font-weight: 500;
-		padding: 10px;
+		// padding: 10px;
 
 		max-width: calc(100% - 40px);
 		left: 20px;
 
 		white-space: normal;
-		text-align: center;
+		// text-align: center;
+	}
+
+	input.article-title {
+		margin: 10px;
+		width: calc(100% - 20px);
+	}
+
+	div.button {
+		margin-top: 10px;
+		width: 100%;
+	}
+
+	div#editorjs-holder {
+		width: 100%;
+
+		overflow: visible;
+		white-space: normal;
+	}
+
+	div.editor-container {
+		overflow: visible;
+
+		div.image-tool__image img {
+			width: 100%;
+		}
 	}
 }
