--- a/src/cms/forms/control-form/editor-page/editor-page.less
+++ b/src/cms/forms/control-form/editor-page/editor-page.less
@@ -124,3 +124,44 @@ div.content-container#content-editor {
 		}
 	}
 }
+
+div.page-exception {
+	width: 100%;
+	height: 100%;
+
+	top: 0;
+	left: 0;
+
+	div.page-exception-content {
+		max-width: 360px;
+		white-space: normal;
+
+		text-align: justify;
+
+		font-weight: 500;
+		align-items: flex-start;
+
+		span.title {
+			font-weight: 700;
+			font-size: 18px;
+
+			opacity: .8;
+
+			text-transform: uppercase;
+		}
+
+		span.description {
+			padding: 5px;
+			padding-left: 10px;
+
+			border-left: 2px solid rgba(#000, .2);
+		}
+
+		span.code {
+			opacity: .4;
+			font-size: 14px;
+
+			font-weight: 700;
+		}
+	}
+}
