--- a/src/pages/title-page/title-page.less
+++ b/src/pages/title-page/title-page.less
@@ -23,7 +23,7 @@ div.page-wrapper#title-page {
 	}
 
 	div.limited {
-		max-width: 95%;
+		max-width: 90%;
 		width: fit-content;
 	}
 }
@@ -71,6 +71,7 @@ div#title-page div.main-article-wrapper {
 
 	div.limited {
 		flex-wrap: nowrap;
+		// max-width: 1480px;
 	}
 
 	div#main-article {
@@ -78,8 +79,9 @@ div#title-page div.main-article-wrapper {
 		background-repeat: no-repeat;
 		background-size: contain;
 
-		min-width: calc(100% - 320px);
+		// min-width: calc(100% - 320px);
 		width: calc(100% - 320px);
+		max-width: calc(100% - 40px);
 
 		min-height: 400px;
 
