--- a/src/cms/forms/control-form/materials-list/materials-list.less
+++ b/src/cms/forms/control-form/materials-list/materials-list.less
@@ -25,6 +25,16 @@ div#content-list {
 		justify-content: flex-start;
 		align-items: flex-start;
 
+		div.button.create-material {
+			width: 100%;
+			margin-top: 20px;
+		}
+
+		input.searchInput {
+			width: 100%;
+			margin-bottom: 10px;
+		}
+
 		span.data-title {
 			font-size: 13px;
 			text-transform: uppercase;
@@ -59,11 +69,31 @@ div#content-list {
 		max-width: 720px;
 		gap: 20px;
 		padding: 20px;
+		width: 720px;
+		max-width: 100%;
 
 		height: 100%;
 		max-height: 100%;
 
 		overflow: hidden;
+
+		span.not-found {
+			position: relative;
+			display: flex;
+			margin: 40px 0;
+
+			font-weight: 500;
+			font-size: 14px;
+
+			opacity: .8;
+			width: 100%;
+
+			text-align: center;
+			justify-content: center;
+			align-items: center;
+
+			height: 100%;
+		}
 
 		div.preview-image {
 			position: absolute;
@@ -87,6 +117,7 @@ div#content-list {
 			background: linear-gradient(45deg, #fff 30%, rgba(#fff, .75));
 
 			font-weight: 500;
+
 			span.material-title {
 				font-weight: 700;
 			}
@@ -111,7 +142,7 @@ div#content-list {
 						position: relative;
 						display: block;
 
-						content: "Новость еще не опубликована";
+						content: "Материал еще не опубликован";
 						font-size: 13px;
 						padding: 3px;
 						background: rgba(@defaultDarkColor, 1);
