--- a/src/cms/forms/control-form/editor-page/sections/options.less
+++ b/src/cms/forms/control-form/editor-page/sections/options.less
@@ -90,8 +90,8 @@ div.checkbox {
 		position: relative;
 		display: block;
 
-		width: 20px;
-		height: 20px;
+		min-width: 20px;
+		min-height: 20px;
 
 		border-radius: 4px;
 		background: rgba(#000, .2);
