--- a/src/components/footer/footer.less
+++ b/src/components/footer/footer.less
@@ -106,3 +106,69 @@ footer#content-footer {
 		}
 	}
 }
+
+a {
+	text-decoration: none;
+}
+div.special-links {
+	padding: 45px 20px;
+	overflow: hidden;
+	background-color: #1d1e2c;
+	gap: 10px;
+
+	align-items: flex-start;
+
+	div.bg-image {
+		position: absolute;
+		display: block;
+
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+
+		background-image: url("https://www.wbcsd.org/var/site/storage/images/media/images/nature-action/153104-1-eng-GB/Nature-Action_i1140.jpg");
+		background-size: cover;
+		background-repeat: no-repeat;
+
+		background-position: center center;
+		// filter: brightness(40%);
+		mask-image: linear-gradient(to left, rgba(#000, 0.5), rgba(#000, 0.2));
+	}
+
+	div.link {
+		white-space: normal;
+		z-index: 2;
+
+		width: 210px;
+		height: fit-content;
+
+		padding: 10px;
+		transition: 100ms ease all;
+		border-radius: 4px;
+		cursor: pointer;
+
+		// text-align: justify;
+		text-align: center;
+
+		&:hover {
+			background: rgba(#fff, .1);
+		}
+
+		img {
+			width: 60%;
+
+			background: linear-gradient(45deg, rgba(#fff, 1), rgba(#fff, .8));
+			border-radius: 50%;
+			margin-bottom: 20px;
+			height: auto;
+			padding: 16px;
+		}
+
+		span.title {
+			font-weight: 700;
+			opacity: 0.9;
+			color: #fff;
+		}
+	}
+}
