--- a/src/pages/default-page/default-page.less
+++ b/src/pages/default-page/default-page.less
@@ -18,6 +18,7 @@ div.page-wrapper {
 	// justify-content: center;
 	align-items: center;
 	min-height: calc(100% - 40px);
+	margin-bottom: 80px;
 
 	div.page-content {
 		position: relative;
@@ -102,7 +103,16 @@ div.page-wrapper {
 			justify-content: center;
 			align-items: center;
 
+			// display: inline-flex;
+			// padding: 10px 40%;
+
 			padding: 10px;
+			img {
+				height: auto;
+				width: auto;
+
+				max-width: 50%;
+			}
 		}
 
 		&:not(.image-block--with-background).image-block--with-border {
