Page with pagination code rewrite (in progress)

--- a/src/cms/forms/control-form/materials-list/materials-list.less
+++ b/src/cms/forms/control-form/materials-list/materials-list.less
@@ -116,10 +116,12 @@ div#content-list {
 
 			background: linear-gradient(45deg, #fff 30%, rgba(#fff, .75));
 
+			width: 100%;
 			font-weight: 500;
 
 			span.material-title {
 				font-weight: 700;
+				margin-bottom: 10px;
 			}
 
 			span.publish-date {
@@ -164,6 +166,7 @@ div#content-list {
 					padding-left: 10px;
 
 					margin: 10px 0;
+					margin-top: 0;
 
 					&::first-letter {
 						margin-left: 10px;
