--- a/src/components.less
+++ b/src/components.less
@@ -12,6 +12,8 @@ div.button {
 	width: fit-content;
 	height: fit-content;
 
+	user-select: none;
+
 	cursor: pointer;
 	transition: 100ms ease all;
 
