--- a/src/pages/default-page/default-page.less
+++ b/src/pages/default-page/default-page.less
@@ -15,10 +15,47 @@ div.page-wrapper {
 
 	user-select: text;
 
+	@keyframes loading-fade {
+		100% {
+			opacity: 0;
+		}
+	}
+
+	&::after {
+		position: fixed;
+		display: flex;
+
+		top: 0;
+		left: 0;
+		z-index: 99999;
+
+		padding-top: 150px;
+
+		justify-content: center;
+		align-items: center;
+
+		top: 0;
+		left: 0;
+
+		width: 100%;
+		height: 100%;
+
+		background: white;
+
+		content: "Загрузка...";
+		z-index: 100;
+	}
+
+	&[data-loaded="true"]::after {
+		animation: loading-fade ease forwards 200ms 500ms;
+		pointer-events: none;
+	}
+
 	// justify-content: center;
 	align-items: center;
 	min-height: calc(100% - 40px);
 	margin-bottom: 80px;
+	transition: 100ms ease all;
 
 	div.page-content {
 		position: relative;
@@ -26,8 +63,9 @@ div.page-wrapper {
 
 		max-width: 860px;
 
-		width: fit-content;
+		width: 100%;
 
+		transition: 100ms ease all;
 		height: fit-content;
 		// flex-direction: column;
 	}
