--- a/src/pages/exception/exception.less
+++ b/src/pages/exception/exception.less
@@ -10,6 +10,9 @@ div.not-match-page {
 
 	padding: 0 20px;
 
+	margin-left: auto;
+	margin-right: auto;
+
 	span.page-title {
 		position: relative;
 		display: flex;
