--- a/src/cms/forms/control-form/materials-list/materials-list.less
+++ b/src/cms/forms/control-form/materials-list/materials-list.less
@@ -72,10 +72,10 @@ div#content-list {
 		width: 720px;
 		max-width: 100%;
 
-		height: 100%;
-		max-height: 100%;
+		height: calc(100% - 68px);
 
 		overflow: hidden;
+		overflow-y: auto;
 
 		span.not-found {
 			position: relative;
@@ -168,9 +168,9 @@ div#content-list {
 					margin: 10px 0;
 					margin-top: 0;
 
-					&::first-letter {
-						margin-left: 10px;
-					}
+					// &::first-letter {
+					// 	margin-left: 10px;
+					// }
 
 					border-left: 2px solid rgba(#000, .2);
 				}
