--- a/src/pages/default-page/default-page.less
+++ b/src/pages/default-page/default-page.less
@@ -14,6 +14,61 @@ div.page-wrapper {
 	text-align: justify;
 
 	user-select: text;
+	a.file-attachment-link {
+		background: transparent !important;
+	}
+
+	div.file-attachment {
+		align-items: center;
+		gap: 20px;
+
+		color: #000;
+		user-select: none;
+
+		padding: 20px 30px;
+		border: 1px solid rgba(#000, .2);
+		border-radius: 3px;
+
+		margin: 10px;
+
+		cursor: pointer;
+		transition: 100ms ease all;
+		&:hover {
+			background: rgba(#000, .05);
+			div.download-icon {
+				opacity: .9;
+			}
+		}
+
+		// width: fit-content;
+
+		img {
+			width: auto;
+			height: 32px;
+		}
+
+		div.attach-data {
+			align-items: flex-start;
+
+			div.file-type,
+			div.file-size {
+				opacity: .8;
+				font-size: 14px;
+
+				line-height: 18px;
+			}
+		}
+
+		div.download-icon {
+			margin-left: auto;
+			opacity: .5;
+			transition: 100ms ease all;
+
+			img {
+				height: 24px;
+			}
+		}
+	}
 
 	@keyframes loading-fade {
 		100% {
@@ -21,8 +76,64 @@ div.page-wrapper {
 		}
 	}
 
+	@media screen and (max-width: 630px) {
+		table,
+		thead,
+		tbody,
+		th,
+		td,
+		tr {
+			display: block;
+		}
+	}
+
+	table {
+		position: relative;
+		display: flex;
+		width: fit-content;
+		max-width: 100%;
+		border: 1px solid rgba(#000, .2);
+		border-top: none;
+		border-bottom: none;
+		border-collapse: collapse;
+		table-layout: fixed;
+
+		flex-direction: column;
+		margin-bottom: 10px;
+
+		a[href^="mailto:"] {
+			display: block;
+			width: fit-content;
+			height: fit-content;
+			padding: 5px;
+			line-height: 22px;
+			white-space: nowrap;
+		}
+
+		// overflow: hidden;
+
+		tr,
+		td,
+		th {
+			border: 1px solid rgba(#000, .2);
+			border-right: none;
+			border-left: none;
+
+			text-align: left;
+		}
+
+		td:nth-child(3) {
+			text-align: center;
+		}
+
+		td,
+		th {
+			padding: 30px;
+		}
+	}
+
 	&::after {
-		position: fixed;
+		position: absolute;
 		display: flex;
 
 		top: 0;
@@ -47,8 +158,9 @@ div.page-wrapper {
 	}
 
 	&[data-loaded="true"]::after {
-		animation: loading-fade ease forwards 200ms 500ms;
+		animation: loading-fade ease forwards 200ms 200ms;
 		pointer-events: none;
+		content: "";
 	}
 
 	// justify-content: center;
@@ -85,15 +197,44 @@ div.page-wrapper {
 		margin: 0;
 		margin-bottom: 10px;
 
-		&::first-letter {
-			margin-left: 20px;
+		// &::first-letter {
+		// 	margin-left: 20px;
+		// }
+	}
+
+	div.notification {
+		position: relative;
+		display: flex;
+
+		flex-direction: column;
+
+		width: 100%;
+		height: fit-content;
+
+		border-radius: 4px;
+		border: 1px solid rgba(#000, .3);
+		padding: 10px;
+		margin: 6px 0;
+
+		&:first-child {
+			border-bottom: none;
+		}
+
+		div.title {
+			border-bottom: 1px solid rgba(#000, .15);
+			padding: 10px;
+			font-weight: 700;
+		}
+
+		div.message {
+			padding: 10px;
 		}
 	}
 
 	.cdx-marker,
 	.inline-code,
 	a {
-		background: rgba(rgb(255, 255, 109), .7);
+		background: rgba(rgb(255, 230, 86), .7);
 		padding: 1px 2px;
 		border-radius: 4px;
 
@@ -110,8 +251,23 @@ div.page-wrapper {
 		}
 	}
 
+	hr {
+		opacity: 0;
+		// padding: 20px 0;
+	}
+	.cdx-marker {
+		background: rgba(rgb(255, 230, 86), .4);
+		color: rgb(29, 29, 17);
+		padding: 2px 4px;
+	}
+
 	.inline-code {
-		background: rgba(#000, .1);
+		background: rgba(red, .07);
+		padding: 8px;
+		word-break: keep-all;
+		line-break: strict;
+		color: rgb(163, 10, 10);
+		line-height: 40px;
 	}
 
 	figure {
@@ -196,9 +352,9 @@ div.page-wrapper {
 		position: relative;
 		display: block;
 
-		margin: 30px 0;
+		margin: 20px 0;
 		width: calc(100% - 40px);
-		left: 20px;
+		// left: 20px;
 	}
 
 	h1,
