--- a/src/root.less
+++ b/src/root.less
@@ -100,6 +100,10 @@ div#page-data-container {
 	height: 100%;
 	overflow: auto;
 	overflow-x: hidden;
+
+	&[data-mobile-menu="true"] {
+		overflow: hidden;
+	}
 }
 
 a[href].icon {
@@ -115,95 +119,13 @@ div.cdx-notifies {
 	display: none;
 }
 
+a.ddt {
+	background: none !important;
+}
+
 div.page-with-pagination {
 	transition: 100ms ease all;
 	// padding: 10px;
-
-	div.materials-area {
-		transition: inherit;
-		white-space: normal;
-		// padding: 10px;
-		margin-top: 20px;
-
-		div.material-content {
-			padding: 10px;
-
-			// background: rgba(#000, .1);
-			background: lighten(@defaultLightColor, 5%);
-			border-radius: 4px;
-
-			position: relative;
-			display: flex;
-
-			width: 100%;
-
-			gap: 10px;
-			align-items: center;
-			transition: 100ms ease all;
-
-			cursor: pointer;
-			user-select: none;
-
-			&:hover {
-				background: rgba(#000, .2);
-			}
-			overflow: hidden;
-		}
-
-		div.image-preview {
-			min-width: 120px;
-			min-height: 120px;
-
-			width: 120px;
-			height: 120px;
-
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-			border-radius: 4px;
-			position: relative;
-			display: block;
-
-			z-index: 10;
-		}
-
-		div.image-bg {
-			pointer-events: none;
-			background-size: cover;
-			background-position: center;
-			background-repeat: no-repeat;
-
-			width: 100%;
-			height: 100%;
-
-			position: absolute;
-			display: block;
-
-			top: 0;
-			left: 0;
-			z-index: 0;
-
-			mask-image: linear-gradient(45deg, transparent 40%, rgba(#000, .25));
-			mask-mode: alpha;
-		}
-
-		div.material-title,
-		div.material-text {
-			position: relative;
-			display: block;
-
-			z-index: 10;
-			font-size: 15px;
-			font-weight: 500;
-			p {
-				margin: 0;
-			}
-		}
-
-		div.material-title {
-			font-weight: 700;
-		}
-	}
 
 	div.pagination-area {
 		position: relative;
